--- a/block-BJaadf/code/index.html
+++ b/block-BJaadf/code/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practice Array Methods</title>
   </head>
-  <body></body>
+  <body>
+
+    <script type="text/javascript" src="index.js"></script>
+
+  </body>
 </html>
